--- a/development/build.xml
+++ b/development/build.xml
@@ -71,7 +71,6 @@
       <file file="${workspace}/CHANGES.tmp"/>
     </loadresource>
     <delete file="${workspace}/CHANGES.tmp"/>
-    <echo>${changes}</echo>
     <replaceregexp file="${workspace}/README.md"
         match="(?si)(# Changes \(Change Log\)\s+).*?(\[Read more\])" flags="g" byline="false"
         replace="\1${changes}${line.separator}${line.separator}\2"/>
@@ -103,6 +102,7 @@
         <include name="LICENSE"/>
       </fileset>
     </touch>
+    <delete file="${workspace.releases}/seanox-xmex-${release.version}.zip"/>
     <zip destfile="${workspace.releases}/seanox-xmex-${release.version}.zip">
       <fileset dir="${workspace.releases}">
         <include name=".htaccess"/>
