--- a/sources/service.yaml
+++ b/sources/service.yaml
@@ -33,8 +33,8 @@ info:
     <pre>
     https://xmex.seanox.com/xmex!count(//items[@id<0])<br>
     https://xmex.seanox.com/xmex!count(%2F%2Fitems[@id<0])<br>
-    https://xmex.seanox.com/xmex!0x636F756E74282F2F6974656D735B4069643C305D29<br>
-    https://xmex.seanox.com/xmex!Base64:Y291bnQoLy9pdGVtc1tAaWQ8MF0p<br>
+    https://xmex.seanox.com/xmex!636F756E74282F2F6974656D735B4069643C305D29<br>
+    https://xmex.seanox.com/xmex!Y291bnQoLy9pdGVtc1tAaWQ8MF0p<br>
     </pre>
     
     The request supports the following additional headers:
@@ -232,7 +232,7 @@ paths:
         204:
           description: |
             Storage already exists<br>
-            or CORS Access-Control preflight request .
+            or CORS Access-Control preflight request
         400:
           description: |
             Storage header is invalid, 1 - 64 characters (0-9A-Z_) are expected<br>
