--- a/docker/usr/local/xmex/conf.d/xmex.conf
+++ b/docker/usr/local/xmex/conf.d/xmex.conf
@@ -11,7 +11,7 @@ LoadModule rewrite_module modules/mod_rewrite.so
 DocumentRoot "/usr/local/xmex"
 
 RewriteEngine on
-RewriteRule (^/xmex!.*$) service.php [L]
+RewriteRule (^/xmex${XMEX_URI_XPATH_DELIMITER}.*$) service.php [L]
 RewriteRule (^.*$) content/$1 [L]
 
 <Directory "/usr/local/xmex">
