#0000 Docker: Added support as Docker image

--- a/docker/usr/local/xmex/conf.d/xmex.conf
+++ b/docker/usr/local/xmex/conf.d/xmex.conf
@@ -8,14 +8,16 @@ KeepAliveTimeout     5
 
 LoadModule rewrite_module modules/mod_rewrite.so
 
-DocumentRoot "/usr/local/xmex"
+ErrorLog     /dev/stdout
+DocumentRoot /usr/local/xmex
 
 RewriteEngine on
 RewriteRule (^/xmex${XMEX_URI_XPATH_DELIMITER}.*$) service.php [L]
 RewriteRule (^.*$) content/$1 [L]
 
-<Directory "/usr/local/xmex">
+<Directory /usr/local/xmex>
     Options -Indexes
     AllowOverride None
     Require all granted
+    DirectoryIndex index.html openAPI.html
 </Directory>
