#0000 Build: Correction of the version number distribution

--- a/development/build.xml
+++ b/development/build.xml
@@ -88,6 +88,9 @@
     <replaceregexp file="${workspace.sources}/openAPI.yaml"
         match="(?si)\b(version: )\d+(\.\d+)*" flags="g" byline="true"
         replace="\1${release.version}"/>
+    <replaceregexp file="${workspace}/Dockerfile"
+        match="(?si)\b(ARG\s+GIT_REPO_TAG\s*=\s*)\d+(\.\d+)*" flags="g" byline="true"
+        replace="\1${release.version}"/>
   </target>
 
   <target name="release" depends="changes">
